# xeon

./: CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: xeon_local.cpp.B7E4FF9AC0893F61.idx
cmake/modules/: ReadVersion.cmake
control_plane/cli/: xeon_local.cpp
include/xeon/: version.h
